// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "fə gɪŋ siːz fə gʊlf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "fə dɔgs siː fə gʊlfs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "fə gɪŋ gɔgɪŋz æːt fə dɪfəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "fə gɪŋ nat siːz fə gʊlf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾeːbeː βidd duːduːum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kækædeː βidnt duːduːduːum",
    },
    {
      "english": "i give you the bread",
      "target": "ego do tuam",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾeːbeː æbduːdd hduːbeː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾeːbeː non βidd duːduːum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "fɯɯlɯkaːl hoːjel lukin",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hoːjel hoːjel lukin",
    },
    {
      "english": "i give you the bread",
      "target": "mi sin kaː",
    },
    {
      "english": "the king walks at the river",
      "target": "fɯɯlɯkaːl haːk tel kaːj",
    },
    {
      "english": "the king does not see the wolf",
      "target": "fɯɯlɯkaːl hoːjel al lukin",
    },
  ],
  "preset": "tokipona",
}
`;
